# pyqumo_old

./: .gitignore  README.md  requirements.txt  setup.py
cqumo/: Base.cpp  Base.h  CMakeLists.txt  Functions.cpp  Functions.h  Randoms.cpp  Randoms.h
cqumo/tandem/: Components.cpp  Components.h  Journals.cpp  Journals.h  Marshal.cpp  Marshal.h  Simulation.cpp  Simulation.h  Statistics.cpp  Statistics.h  System.cpp  System.h  main.cpp
experiments/: 1. Tandem networks performance with ML.ipynb  1.1. Tandem performance with approximations.ipynb  2. PH Fitting Algorithms.ipynb  2.1. MAP Fitting algorithms.ipynb  3. The influence of the third moment to delays estimates.ipynb  ML_models.ipynb  Tandem_network_crosstraffic.ipynb  Tandem_network_with_ph_distribution.ipynb  m_ph_1_n_machine_learning.ipynb  m_ph_1_n_tandem.ipynb  ns3_ph_fit.ipynb  tandem_exeuctions.ipynb
experiments/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
experiments/data/: .~lock.Tandem_network_with_m_ph_1_n_distribution.csv#  .~lock.tandem_network_crosstraffic.csv#  01_tandem_simulation.csv  02_tandem_simulation_various_net_sizes.csv  1.1_inputs.csv  1a_data.csv  (+15 more)
pyqumo/: __init__.py  arrivals.py  chains.py  constants.py  errors.py  matrix.py  qsim.py  queues.py  random.py  stats.py
tests/: test_arrivals.py  test_chains.py  test_cqumo_sim_gg1.py  test_cqumo_sim_tandem.py  test_fitting_acph2.py  test_fitting_horvath05.py  test_fitting_johnson89.py  test_matrix.py  test_queues.py  test_random.py  test_sim_gg1.py  test_sim_helpers.py  test_sim_tandem.py
(+47 files in other folders)
